LinKreta_POC_Repository/force-app/main/default/objects/GT_Competitor__c/GT_Competitor__c.object-meta.xml
<CustomObject>
    <label>GT Competitor</label>
    <nameField>
        <label>GT Competitor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GT Competitors</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>