LinKreta_POC_Repository/force-app/main/default/objects/GT_Competitor__c/fields/Competitor_Proposed_Commercials__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Proposed_Commercials__c</fullName>
    <label>Competitor Proposed Commercials</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>