LinKreta_POC_Repository/force-app/main/default/objects/GT_Competitor__c/fields/Competitor_Strength__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Strength__c</fullName>
    <label>Competitor Strength</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>