LinKreta_POC_Repository/force-app/main/default/objects/GT_Competitor__c/fields/Competitor_Weakness__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Weakness__c</fullName>
    <label>Competitor Weakness</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>