LinKreta_POC_Repository/force-app/main/default/objects/GT_Competitor__c/fields/Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Enquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>GT_competitors</relationshipName>
    <type>Lookup</type>
</CustomField>