LinKreta_POC_Repository/force-app/main/default/objects/GT_Competitor__c/validationRules/Character_Limit_Competitor_Strength.validationRule-meta.xml
<ValidationRule>
    <fullName>Character_Limit_Competitor_Strength</fullName>
    <active>true</active>
    <description>U_225</description>
    <errorConditionFormula>LEN( Competitor_Strength__c ) &gt; 500</errorConditionFormula>
    <errorDisplayField>Competitor_Strength__c</errorDisplayField>
    <errorMessage>Character size should not be greater than 500</errorMessage>
</ValidationRule>