LinKreta_POC_Repository/force-app/main/default/objects/GT_Competitor__c/validationRules/Character_Limit_Competitor_Weakness.validationRule-meta.xml
<ValidationRule>
    <fullName>Character_Limit_Competitor_Weakness</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Competitor_Weakness__c ) &gt; 500</errorConditionFormula>
    <errorDisplayField>Competitor_Weakness__c</errorDisplayField>
    <errorMessage>Character size should not be greater than 500</errorMessage>
</ValidationRule>