LinKreta_POC_Repository/force-app/main/default/objects/GT_Competitor__c/validationRules/Character_Limit_Remarks.validationRule-meta.xml
<ValidationRule>
    <fullName>Character_Limit_Remarks</fullName>
    <active>true</active>
    <description>U_225</description>
    <errorConditionFormula>LEN( Remarks__c ) &gt; 500</errorConditionFormula>
    <errorDisplayField>Remarks__c</errorDisplayField>
    <errorMessage>Character size should not be greater than 500</errorMessage>
</ValidationRule>